--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,6 +82,7 @@ p,
 a {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
   font-size: 16px;
+  text-underline-offset:0.25em;
 }
 
 strong {
